<resources>
    <!-- Клавиатура -->
    <string name="keyboard_0">0</string>
    <string name="keyboard_1">1</string>
    <string name="keyboard_2">2</string>
    <string name="keyboard_3">3</string>
    <string name="keyboard_4">4</string>
    <string name="keyboard_5">5</string>
    <string name="keyboard_6">6</string>
    <string name="keyboard_7">7</string>
    <string name="keyboard_8">8</string>
    <string name="keyboard_9">9</string>
    <string name="keyboard_x">X</string>
    <string name="keyboard_enter">Ввод</string>

    <!-- Общее-->
    <string name="error_data_msm">Не удалось получить данные от MSM сервера. Попробовать еще раз?</string>
    <string name="app_name">Реестр заданий БПТП</string>
    <string name="text_input_code">ВВЕДИТЕ ВАШ ПЕРСОНАЛЬНЫЙ КОД ИЛИ ОТСКАНИРУЙТЕ БЕЙДЖ</string>
    <string name="scan_your_badge">Отсканируйте свой бейдж</string>

</resources>